# LangChain-Notes

./: .env.example  .gitignore  README.md  pyproject.toml
updatedlangchain/: messages.ipynb  structuredOP.ipynb
